CHANGELOG
=========

3.11.3 (2022-04-05)
-------------------
* [BUG] #7142 - fix typo in locallib.php
* [BUG] #7149 - fix error when manually updating files - github issue #59

3.11.2 (2021-12-22)
-------------------
* [FEATURE] #6931 - Add events in calendar - github pull request #48 from Henry Brink
* [BUG] #7091 - fix Ambiguous column name 'email' github issue #55 from mrkskwsnck

3.11.1 (2021-09-15)
-------------------
* [FEATURE] #6879 - make files that need approval more visible and add infotext
* [BUG] #6967 - fix wrong default value for db fields in table publication_groupapproval - github issue #52
* [BUG] #6975 - fix wrong referenced table in install.xml - github issue #53
* [FIXED] #6929 - fix language of notifications to match that of the receiver 

3.11.0 (2021-05-25)
-------------------
* Moodle 3.11.0 compatible version
* [FEATURE] #6834 - add one more file status for students - "pending approval"
* [FIXED] #6912 - fix buttons margins - github merge request #49 by Luca Bösch
* [FIXED] #6877 - add indexes for db table publication_file, fields publication and userid - github #47
* [FIXED] #6922 - remove warning that appears sometimes during listing of files of groups
* [FIXED] #6923 - fix bug when sending approval-changed notifications to groups
* [FIXED] #6924 - fix showing deleted assignments (pending deletion) in the dropdown
* [FIXED] #6921 - fix approval status in notification text/log entry

3.10.1 (2021-04-14)
-------------------
* [FIXED] #6838 - fix wrong-restored allowedfiletypes

3.10.0 (2020-11-11)
------------------
* Moodle 3.10.0 compatible version
* [FIXED] GitHub #38 - merge Pull request #39 by Christian Wolters - Omit manager in recieveteachernotification cap
* [FIXED] GitHub #41 - remove hardcoded "not approved"

3.9.0 (2020-06-15)
------------------
* Moodle 3.9.0 compatible version

3.8.1 (2020-02-18)
------------------

* [BUG] #6594 uploaded files are now approved automatically, if specified in the settings